--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "disqus-react": "^1.1.5",
     "domhandler": "^5.0.3",
     "execa": "^9.3.1",
+    "axios": "^1.7.2",
     "figures": "^6.1.0",
     "framer-motion": "12.0.0-alpha.0",
     "graphql": "^16.8.2",
