--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@trpc/next": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
+    "axios": "^1.7.2",
     "chalk": "^5.3.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -52,7 +53,6 @@
     "disqus-react": "^1.1.5",
     "domhandler": "^5.0.3",
     "execa": "^9.3.1",
-    "axios": "^1.7.2",
     "figures": "^6.1.0",
     "framer-motion": "12.0.0-alpha.0",
     "graphql": "^16.8.2",
@@ -71,6 +71,7 @@
     "react-dom": "19.0.0-rc-3edc000d-20240926",
     "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1",
+    "react-intersection-observer": "^9.13.1",
     "react-json-tree": "^0.19.0",
     "resend": "^3.2.0",
     "sharp": "^0.33.5",
