--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@payloadcms/live-preview-react": "3.0.0-beta.111",
     "@payloadcms/next": "3.0.0-beta.111",
     "@payloadcms/plugin-form-builder": "3.0.0-beta.111",
+    "@payloadcms/plugin-nested-docs": "3.0.0-beta.111",
     "@payloadcms/plugin-seo": "3.0.0-beta.111",
     "@payloadcms/richtext-slate": "3.0.0-beta.111",
     "@payloadcms/ui": "3.0.0-beta.111",
