--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@payloadcms/plugin-seo": "3.0.0-beta.111",
     "@payloadcms/richtext-slate": "3.0.0-beta.111",
     "@payloadcms/ui": "3.0.0-beta.111",
+    "@payloadcms/storage-s3": "3.0.0-beta.111",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
