--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "@payloadcms/plugin-nested-docs": "3.0.0-beta.111",
     "@payloadcms/plugin-seo": "3.0.0-beta.111",
     "@payloadcms/richtext-slate": "3.0.0-beta.111",
-    "@payloadcms/ui": "3.0.0-beta.111",
     "@payloadcms/storage-s3": "3.0.0-beta.111",
+    "@payloadcms/ui": "3.0.0-beta.111",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
@@ -62,6 +62,7 @@
     "isomorphic-dompurify": "^2.16.0",
     "kbar": "0.1.0-beta.45",
     "lucide-react": "^0.453.0",
+    "mini-svg-data-uri": "^1.4.4",
     "mongodb": "^6.8.0",
     "next": "15.0.0-canary.173",
     "next-nprogress-bar": "^2.3.14",
