--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@trpc/next": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
+    "@xyflow/react": "^12.3.5",
     "axios": "^1.7.2",
     "chalk": "^5.3.0",
     "class-variance-authority": "^0.7.0",
