--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
+    "date-fns": "^4.1.0",
     "deepmerge": "^4.3.1",
     "disqus-react": "^1.1.5",
     "domhandler": "^5.0.3",
@@ -72,6 +73,7 @@
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "19.0.0-rc-3edc000d-20240926",
+    "react-datepicker": "^7.6.0",
     "react-dom": "19.0.0-rc-3edc000d-20240926",
     "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1",
